# sigma-chan-network

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: python-app.yml
manifest/: run_single_job.yaml
scripts/: binary_classifier.py
sigma_chan_network/components/operators/: __init__.py  data_distributor.py  downloder.py
sigma_chan_network/data_structure/configrators/: __init__.py  dataset_config.py  model_config.py  storage_config.py  train_config.py
sigma_chan_network/io/: __init__.py  abstract_storage.py  s3_storage.py
sigma_chan_network/pipelines/: __init__.py  trainer.py
tests/: conftest.py
tests/components/operators/: test_data_distributor.py  test_downloader.py
tests/data_structure/configurators/: test_dataset_config.py  test_model_config.py  test_storage_config.py  test_train_config.py
tests/fixtures/: configurators_fixtures.py  data_storage_fixtures.py
tests/io/: test_s3_storage.py
typical_cnn/data_structure/configrators/: __init__.py  dataset_config.py  model_config.py
