[tool.poetry]
name = "typical-cnn"
version = "0.1.0"
description = ""
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
isort = "^5.10.1"
torch = "<=1.12"
torchvision = "^0.13.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
exclude = '''
(
     \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | db
 )
 '''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = "*/__init__.py"