[tool.poetry]
name = "sigma-chan-network"
version = "0.1.0"
description = ""
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
isort = "^5.10.1"
torch = "<=1.12"
torchvision = "^0.13.0"
tqdm = "^4.64.1"
pydantic = "^1.10.2"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage-badge = "^1.1.0"
boto3 = "^1.26.8"
typer = "^0.7.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
exclude = '''
(
     \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | db
 )
 '''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = "*/__init__.py"